--- a/less/styles.less
+++ b/less/styles.less
@@ -161,6 +161,8 @@ h2.big-header {
 
 .home-container h4 {
   font-size: @medium-text;
+  font-family: Monaco, Consolas, Lucida Console, monospace;
+
   margin-bottom: 2rem;
   @media screen and (max-width: 800px), screen and (max-height: 400px) {
     font-size: @small-text;
@@ -213,7 +215,7 @@ h2.big-header {
 
 .about-me-text {
   font-family: Monaco, Consolas, Lucida Console, monospace;
-  color: @secondary-color
+  color: @secondary-color;
 }
 
 #console-log {
@@ -253,6 +255,10 @@ h2.big-header {
   }
 }
 
+#about-me-cursor {
+  color: @secondary-color;
+}
+
 //projects
 
 .project {
@@ -262,7 +268,7 @@ h2.big-header {
   margin: 3rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
     rgba(0, 0, 0, 0.22) 0px 10px 10px;
-    border-radius: 5px;
+  border-radius: 5px;
 }
 
 .project-details {
@@ -283,15 +289,15 @@ h2.big-header {
 
 .project button {
   background: none;
-	color: inherit;
-	border: none;
-	padding: 0.5rem;
+  color: inherit;
+  border: none;
+  padding: 0.5rem;
   margin: 0.5rem;
   background-color: @secondary-color;
   border-radius: 15px;
-	font: inherit;
-	cursor: pointer;
-	outline: inherit;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
 }
 
 .project-tools {
