Fix margin issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -222,7 +222,7 @@ h2.big-header {
   display: flex;
   align-items: center;
   background-color: #f3f5f8;
-  margin: 3rem;
+  margin-bottom: 3rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
   border-radius: 5px;
 }
