--- a/src/styles.css
+++ b/src/styles.css
@@ -68,6 +68,7 @@ nav a {
 .home-header p {
   font-size: 3rem;
   max-width: 700px;
+  animation: fadeIn 5s;
 }
 @media screen and (max-width: 650px), screen and (max-height: 400px) {
   .home-header p {
@@ -119,6 +120,14 @@ h2.big-header {
   }
   50% {
     border-color: #e63946;
+  }
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 .home-container {
