--- a/less/styles.less
+++ b/less/styles.less
@@ -27,16 +27,6 @@
   color: @primary-text-color;
 }
 
-a {
-  text-decoration: none;
-  color: @secondary-text-color;
-}
-
-a:hover {
-  color: @accent-color;
-  transition: 200ms;
-}
-
 /* nav */
 
 nav {
@@ -278,6 +268,9 @@ h2.big-header {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
     rgba(0, 0, 0, 0.22) 0px 10px 10px;
   border-radius: 5px;
+  @media screen and (max-width: 650px), screen and (max-height: 550px) {
+    flex-direction: column;
+  }
 }
 
 .project-details {
@@ -323,15 +316,7 @@ h2.big-header {
 }
 
 .project img {
-  width: 250px;
-  margin: 1rem;
+  width: 300px;
+  margin: 2rem;
   border-radius: 5px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
-  @media screen and (max-width: 1000px), screen and (max-height: 400px) {
-    display: none;
-  }
-  @media screen and (max-width: 400) {
-    width: 100px;
-  }
 }
