--- a/less/styles.less
+++ b/less/styles.less
@@ -84,7 +84,7 @@ nav a {
 .home-header p {
   font-size: @medium-text;
   max-width: 700px;
-  
+
   @media screen and (max-width: 650px), screen and (max-height: 400px) {
     font-size: @extra-small-text;
   }
@@ -263,11 +263,15 @@ h2.big-header {
 .project {
   display: flex;
   align-items: center;
-  background-color: @off-white;
   margin-bottom: 3rem;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
   border-radius: 5px;
+  @media screen and (max-width: 650px), screen and (max-height: 550px) {
+    flex-direction: column;
+  }
+}
+
+.project:nth-of-type(even) {
+  flex-direction: row-reverse;
   @media screen and (max-width: 650px), screen and (max-height: 550px) {
     flex-direction: column;
   }
@@ -277,6 +281,8 @@ h2.big-header {
   max-width: 800px;
   display: flex;
   flex-direction: column;
+  flex-grow: 2;
+
 }
 
 .project-content {
@@ -315,8 +321,9 @@ h2.big-header {
   font-family: Monaco, Consolas, Lucida Console, monospace;
 }
 
-.project img {
-  width: 300px;
+.project-image img {
+  width: 100%;
+  max-width: 800px;
   margin: 2rem;
-  border-radius: 5px;
+  flex: 1 1 0;
 }
