Fix mobile margin issue

--- a/less/styles.less
+++ b/less/styles.less
@@ -326,4 +326,7 @@ h2.big-header {
   max-width: 800px;
   margin: 2rem;
   flex: 1 1 0;
+  @media screen and (max-width: 650px), screen and (max-height: 550px) {
+    margin: 2rem 0;
+  }
 }
