--- a/src/styles.css
+++ b/src/styles.css
@@ -18,31 +18,6 @@ nav a {
     font-size: 1.5rem;
   }
 }
-.links {
-  display: flex;
-  height: 100vh;
-  flex-direction: column;
-  position: fixed;
-  margin-bottom: 10rem;
-}
-.social-icon {
-  padding: 8px;
-  width: 75px;
-  height: 75px;
-  opacity: 60%;
-}
-@media screen and (max-width: 650px), screen and (max-height: 400px) {
-  .social-icon {
-    width: 35px;
-    height: 35px;
-  }
-}
-@media screen and (max-width: 400px) {
-  .social-icon {
-    width: 20px;
-    height: 20px;
-  }
-}
 /* Home */
 .home-header {
   display: flex;
@@ -284,4 +259,25 @@ h2.big-header {
   .project-image img {
     margin: 2rem 0;
   }
+}
+.footer {
+  background-color: #a8dadc;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.footer p {
+  margin: 1rem;
+}
+.links {
+  display: flex;
+  flex-direction: row;
+  margin: 2rem;
+}
+.social-icon {
+  padding: 8px;
+  width: 75px;
+  height: 75px;
+  opacity: 60%;
 }
