--- a/less/styles.less
+++ b/less/styles.less
@@ -43,30 +43,6 @@ nav a {
   }
 }
 
-//social icons
-.links {
-  display: flex;
-  height: 100vh;
-  flex-direction: column;
-  position: fixed;
-  margin-bottom: 10rem;
-}
-
-.social-icon {
-  padding: 8px;
-  width: 75px;
-  height: 75px;
-  opacity: 60%;
-  @media screen and (max-width: 650px), screen and (max-height: 400px) {
-    width: 35px;
-    height: 35px;
-  }
-  @media screen and (max-width: 400px) {
-    width: 20px;
-    height: 20px;
-  }
-}
-
 /* Home */
 
 .home-header {
@@ -329,4 +305,32 @@ h2.big-header {
   @media screen and (max-width: 650px), screen and (max-height: 550px) {
     margin: 2rem 0;
   }
+}
+
+//footer
+
+.footer {
+  background-color: @secondary-color;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer p {
+  margin: 1rem;
+}
+
+//social icons
+.links {
+  display: flex;
+  flex-direction: row;
+  margin: 2rem;
+}
+
+.social-icon {
+  padding: 8px;
+  width: 75px;
+  height: 75px;
+  opacity: 60%;
 }
