--- a/src/styles.css
+++ b/src/styles.css
@@ -241,13 +241,31 @@ h2.big-header {
   background: none;
   color: inherit;
   border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0.5rem;
-  margin: 0.5rem;
+  margin-top: 8px;
   background-color: #a8dadc;
-  border-radius: 15px;
+  border-radius: 10px;
   font: inherit;
+  font-weight: 700;
   cursor: pointer;
   outline: inherit;
+}
+.project button:hover {
+  transition: 200ms;
+  transform: translateY(-2px);
+  opacity: 80%;
+}
+.project a {
+  text-decoration: none;
+}
+.project button .button-icon {
+  height: 1.5rem;
+  margin-left: 0.25rem;
+  opacity: 60%;
+  align-items: center;
 }
 .project-tools {
   display: flex;
