--- a/less/styles.less
+++ b/less/styles.less
@@ -159,33 +159,6 @@ h2.big-header {
     width: 250px;
   }
 }
-.animate-image-right {
-  animation-duration: 3s;
-  animation-name: animate-image-right;
-}
-
-.animate-image-left {
-  animation-duration: 3s;
-  animation-name: animate-image-left;
-}
-
-@keyframes animate-image-left {
-  0% {
-    transform: translateX(150px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-
-@keyframes animate-image-right {
-  0% {
-    transform: translateX(-150px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
 
 #about-me-code {
   background-color: @primary-text-color;
@@ -360,6 +333,38 @@ h2.big-header {
   flex: 1 1 0;
   @media screen and (max-width: 650px), screen and (max-height: 550px) {
     margin: 2rem 0;
+  }
+}
+
+// .project-image {
+//   margin-left: 150px
+// }
+
+.animate-image-right {
+  animation-duration: 3s;
+  animation-name: animate-image-right;
+}
+
+.animate-image-left {
+  animation-duration: 3s;
+  animation-name: animate-image-left;
+}
+
+@keyframes animate-image-left {
+  0% {
+    transform: translateX(150px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes animate-image-right {
+  0% {
+    transform: translateX(-150px);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
 
