Update image animations:

--- a/less/styles.less
+++ b/less/styles.less
@@ -336,10 +336,6 @@ h2.big-header {
   }
 }
 
-// .project-image {
-//   margin-left: 150px
-// }
-
 .animate-image-right {
   animation-duration: 3s;
   animation-name: animate-image-right;
@@ -352,10 +348,10 @@ h2.big-header {
 
 @keyframes animate-image-left {
   0% {
-    transform: translateX(150px);
+    opacity: 0%;
   }
   100% {
-    transform: translateX(0);
+    opacity: 100%;
   }
 }
 
