--- a/src/styles.css
+++ b/src/styles.css
@@ -298,10 +298,10 @@ h2.big-header {
 }
 @keyframes animate-image-left {
   0% {
-    transform: translateX(150px);
+    opacity: 0%;
   }
   100% {
-    transform: translateX(0);
+    opacity: 100%;
   }
 }
 @keyframes animate-image-right {
