--- a/less/styles.less
+++ b/less/styles.less
@@ -1,9 +1,11 @@
-@primary-color: #f1faee;
-@secondary-color: #a8dadc;
-@accent-color: #e63946;
-@primary-text-color: #1d3557;
-@secondary-text-color: #457b9d;
+@primary-color: #e0fbfc;
+@secondary-color: #98c1d9;
+@accent-color: #ee6c4d;
+@primary-text-color: #023047;
+@secondary-text-color: #3d5a80;
+
 @off-white: #f3f5f8;
+@screen-color: #8e9aaf;
 
 @extra-large-text: 6rem;
 @very-large-text: 5rem;
@@ -60,14 +62,15 @@ nav a {
 .home-header p {
   font-size: @medium-text;
   max-width: 700px;
-
   @media screen and (max-width: 650px), screen and (max-height: 400px) {
     font-size: @extra-small-text;
   }
 }
 
 .intro span {
-  color: @secondary-color;
+  color: @accent-color;
+  font-family: Monaco, Consolas, Lucida Console, monospace;
+  font-size: 0.8em;
   animation: fadeIn 8s;
 }
 
@@ -132,16 +135,25 @@ h2.big-header {
   align-items: center;
   justify-content: center;
   padding: 6rem 2rem;
-  background-color: @primary-color;
 }
 
 .home-container h4 {
-  font-size: @medium-text;
+  font-size: @large-text;
+  color: @accent-color;
   font-family: Monaco, Consolas, Lucida Console, monospace;
-  margin-bottom: 2rem;
+  margin-bottom: 2em;
   @media screen and (max-width: 800px), screen and (max-height: 400px) {
-    font-size: @small-text;
+    font-size: @medium-text;
   }
+}
+
+.home-container h4:after {
+  content: " ";
+  border: 4px solid @secondary-text-color;
+  display: block;
+  margin: 0 auto;
+  margin-top: 30px;
+  width: 100px;
 }
 
 //about me
@@ -161,7 +173,7 @@ h2.big-header {
 }
 
 #about-me-code {
-  background-color: @primary-text-color;
+  background-color: @screen-color;
   border-radius: 15px 15px 5px 5px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
     rgba(0, 0, 0, 0.22) 0px 10px 10px;
@@ -200,7 +212,6 @@ h2.big-header {
 
 .about-me-text {
   font-family: Monaco, Consolas, Lucida Console, monospace;
-  color: @secondary-color;
 }
 
 #console-log {
@@ -240,11 +251,10 @@ h2.big-header {
   }
 }
 
-#about-me-cursor {
-  color: @secondary-color;
-}
-
 //projects
+.home-projects {
+  background-color: @primary-color;
+}
 
 .project {
   display: flex;
