--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  color: #1d3557;
+  color: #023047;
 }
 /* nav */
 nav {
@@ -25,7 +25,7 @@ nav a {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #f1faee;
+  background-color: #e0fbfc;
 }
 @media screen and (max-width: 650px), screen and (max-height: 400px) {
   .home-header {
@@ -42,12 +42,14 @@ nav a {
   }
 }
 .intro span {
-  color: #a8dadc;
+  color: #ee6c4d;
+  font-family: Monaco, Consolas, Lucida Console, monospace;
+  font-size: 0.8em;
   animation: fadeIn 8s;
 }
 .intro h1 {
   font-size: 2rem;
-  color: #1d3557;
+  color: #023047;
   animation: fadeIn 3s;
 }
 @media screen and (max-width: 650px), screen and (max-height: 400px) {
@@ -64,10 +66,10 @@ nav a {
   }
 }
 h2.big-header {
-  color: #e63946;
+  color: #ee6c4d;
   font-family: Monaco, Consolas, Lucida Console, monospace;
   overflow: hidden;
-  border-right: 0.15em solid #e63946;
+  border-right: 0.15em solid #ee6c4d;
   white-space: nowrap;
   margin: 0 auto;
   letter-spacing: 0em;
@@ -87,7 +89,7 @@ h2.big-header {
     border-color: transparent;
   }
   50% {
-    border-color: #e63946;
+    border-color: #ee6c4d;
   }
 }
 @keyframes fadeIn {
@@ -104,23 +106,31 @@ h2.big-header {
   align-items: center;
   justify-content: center;
   padding: 6rem 2rem;
-  background-color: #f1faee;
 }
 .home-container h4 {
-  font-size: 3rem;
+  font-size: 4rem;
+  color: #ee6c4d;
   font-family: Monaco, Consolas, Lucida Console, monospace;
-  margin-bottom: 2rem;
+  margin-bottom: 2em;
 }
 @media screen and (max-width: 800px), screen and (max-height: 400px) {
   .home-container h4 {
-    font-size: 2rem;
+    font-size: 3rem;
   }
 }
+.home-container h4:after {
+  content: " ";
+  border: 4px solid #3d5a80;
+  display: block;
+  margin: 0 auto;
+  margin-top: 30px;
+  width: 100px;
+}
 .about-me {
-  background-color: #a8dadc;
+  background-color: #98c1d9;
 }
 .profile-picture img {
-  border: 10px solid #e63946;
+  border: 10px solid #ee6c4d;
   border-radius: 100%;
   margin-bottom: 2rem;
   width: 300px;
@@ -131,7 +141,7 @@ h2.big-header {
   }
 }
 #about-me-code {
-  background-color: #1d3557;
+  background-color: #8e9aaf;
   border-radius: 15px 15px 5px 5px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
@@ -163,11 +173,10 @@ h2.big-header {
 }
 .about-me-text {
   font-family: Monaco, Consolas, Lucida Console, monospace;
-  color: #a8dadc;
 }
 #console-log {
   font-family: Monaco, Consolas, Lucida Console, monospace;
-  color: #e63946;
+  color: #ee6c4d;
 }
 .about-me,
 .home-projects {
@@ -201,8 +210,8 @@ h2.big-header {
     font-size: 1rem;
   }
 }
-#about-me-cursor {
-  color: #a8dadc;
+.home-projects {
+  background-color: #e0fbfc;
 }
 .project {
   display: flex;
@@ -246,7 +255,7 @@ h2.big-header {
   align-items: center;
   padding: 0.5rem;
   margin-top: 8px;
-  background-color: #a8dadc;
+  background-color: #98c1d9;
   border-radius: 10px;
   font: inherit;
   font-weight: 700;
@@ -272,7 +281,7 @@ h2.big-header {
   flex-wrap: wrap;
 }
 .tool {
-  border: 2px solid #e63946;
+  border: 2px solid #ee6c4d;
   margin: 0.5rem;
   padding: 0 0.5rem;
   border-radius: 5px;
@@ -313,7 +322,7 @@ h2.big-header {
   }
 }
 .footer {
-  background-color: #a8dadc;
+  background-color: #98c1d9;
   display: flex;
   flex-direction: column;
   justify-content: center;
