Add better typewriter effect

--- a/less/styles.less
+++ b/less/styles.less
@@ -93,41 +93,41 @@ nav a {
 h2.big-header {
   color: @accent-color;
   font-family: Monaco, Consolas, Lucida Console, monospace;
-  overflow: hidden;
-  border-right: 0.15em solid @accent-color;
-  white-space: nowrap;
-  margin: 0 auto;
-  letter-spacing: 0em;
-  animation: typing 2.5s steps(40), blink-caret 0.75s step-end infinite;
+  // overflow: hidden;
+  // border-right: 0.15em solid @accent-color;
+  // white-space: nowrap;
+  // margin: 0 auto;
+  // letter-spacing: 0em;
+  // animation: typing 2.5s steps(40), blink-caret 0.75s step-end infinite;
 }
 
-@keyframes typing {
-  from {
-    width: 0;
-  }
-  to {
-    width: 100%;
-  }
-}
+// @keyframes typing {
+//   from {
+//     width: 0;
+//   }
+//   to {
+//     width: 100%;
+//   }
+// }
 
-@keyframes blink-caret {
-  from,
-  to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: @accent-color;
-  }
-}
+// @keyframes blink-caret {
+//   from,
+//   to {
+//     border-color: transparent;
+//   }
+//   50% {
+//     border-color: @accent-color;
+//   }
+// }
 
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
+// @keyframes fadeIn {
+//   0% {
+//     opacity: 0;
+//   }
+//   100% {
+//     opacity: 1;
+//   }
+// }
 
 .home-container {
   display: flex;
