Organize less files

--- a/less/styles.less
+++ b/less/styles.less
@@ -1,403 +1,14 @@
-@primary-color: #e0fbfc;
-@secondary-color: #98c1d9;
-@accent-color: #ee6c4d;
-@primary-text-color: #023047;
-@secondary-text-color: #3d5a80;
-
-@off-white: #f3f5f8;
-@screen-color: #8e9aaf;
-
-@extra-large-text: 6rem;
-@very-large-text: 5rem;
-@large-text: 4rem;
-@medium-text: 3rem;
-@small-text: 2rem;
-@extra-small-text: 1.5rem;
-@ultra-small-text: 1rem;
-
-.flexInit() {
-  display: flex;
-  flex-wrap: wrap;
-}
+@import "./hero.less";
+@import "./about.less";
+@import "./projects.less";
+@import "./footer.less";
 
 //general
+
 * {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   color: @primary-text-color;
-}
-
-/* nav */
-
-nav {
-  display: flex;
-  position: absolute;
-}
-
-nav a {
-  margin: 8px;
-  font-size: @small-text;
-  font-family: Monaco, Consolas, Lucida Console, monospace;
-  @media screen and (max-width: 650px), screen and (max-height: 400px) {
-    font-size: @extra-small-text;
-  }
-}
-
-/* Home */
-
-.home-header {
-  display: flex;
-  padding: 1rem;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background-color: @primary-color;
-  @media screen and (max-width: 650px), screen and (max-height: 400px) {
-    flex-direction: column;
-  }
-}
-
-.home-header p {
-  font-size: @medium-text;
-  max-width: 700px;
-  @media screen and (max-width: 650px), screen and (max-height: 400px) {
-    font-size: @extra-small-text;
-  }
-}
-
-.intro span {
-  color: @accent-color;
-  font-family: Monaco, Consolas, Lucida Console, monospace;
-  font-size: 0.8em;
-  animation: fadeIn 8s;
-}
-
-.intro h1 {
-  font-size: @small-text;
-  color: @primary-text-color;
-  @media screen and (max-width: 650px), screen and (max-height: 400px) {
-    font-size: @extra-small-text;
-  }
-  animation: fadeIn 3s;
-}
-
-.big-header {
-  font-size: @extra-large-text;
-  @media screen and (max-width: 650px), screen and (max-height: 400px) {
-    font-size: @large-text;
-  }
-}
-
-h2.big-header {
-  color: @accent-color;
-  font-family: Monaco, Consolas, Lucida Console, monospace;
-  // overflow: hidden;
-  // border-right: 0.15em solid @accent-color;
-  // white-space: nowrap;
-  // margin: 0 auto;
-  // letter-spacing: 0em;
-  // animation: typing 2.5s steps(40), blink-caret 0.75s step-end infinite;
-}
-
-// @keyframes typing {
-//   from {
-//     width: 0;
-//   }
-//   to {
-//     width: 100%;
-//   }
-// }
-
-// @keyframes blink-caret {
-//   from,
-//   to {
-//     border-color: transparent;
-//   }
-//   50% {
-//     border-color: @accent-color;
-//   }
-// }
-
-// @keyframes fadeIn {
-//   0% {
-//     opacity: 0;
-//   }
-//   100% {
-//     opacity: 1;
-//   }
-// }
-
-.home-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 6rem 2rem;
-}
-
-.home-container h4 {
-  font-size: @large-text;
-  color: @accent-color;
-  font-family: Monaco, Consolas, Lucida Console, monospace;
-  margin-bottom: 2em;
-  @media screen and (max-width: 800px), screen and (max-height: 400px) {
-    font-size: @medium-text;
-  }
-}
-
-.home-container h4:after {
-  content: " ";
-  border: 4px solid @secondary-text-color;
-  display: block;
-  margin: 0 auto;
-  margin-top: 30px;
-  width: 100px;
-}
-
-//about me
-
-.about-me {
-  background-color: @secondary-color;
-}
-
-.profile-picture img {
-  border: 10px solid @accent-color;
-  border-radius: 100%;
-  margin-bottom: 2rem;
-  width: 300px;
-  @media screen and (max-width: 650px), screen and (max-height: 400px) {
-    width: 250px;
-  }
-}
-
-#about-me-code {
-  background-color: @screen-color;
-  border-radius: 15px 15px 5px 5px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
-}
-
-#about-me-header {
-  background-color: @off-white;
-  height: 25px;
-  border-radius: 15px 15px 0px 0px;
-  display: flex;
-  align-items: center;
-}
-
-.circle {
-  width: 17px;
-  height: 17px;
-  border-radius: 100%;
-  background-color: #2a9d8f;
-  margin-left: 10px;
-}
-
-.circle:nth-last-of-type(2) {
-  background-color: #e9c46a;
-}
-.circle:nth-last-of-type(3) {
-  background-color: #e76f51;
-}
-
-.about-me-entry {
-  padding: 1rem 2rem;
-}
-
-.about-me-entry :nth-last-of-type(odd) {
-  color: @off-white;
-}
-
-.about-me-text {
-  font-family: Monaco, Consolas, Lucida Console, monospace;
-}
-
-#console-log {
-  font-family: Monaco, Consolas, Lucida Console, monospace;
-  color: @accent-color;
-}
-
-.about-me,
-.home-projects {
-  justify-content: center;
-}
-
-.home-projects h4 {
-  align-self: center;
-  padding-top: 4rem;
-}
-
-.about-me content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 3rem;
-  @media screen and (max-width: 650px), screen and (max-height: 400px) {
-    flex-direction: column;
-    margin: 0.25rem;
-  }
-}
-
-.about-me-text {
-  flex-direction: column;
-  justify-content: flex-end;
-  font-size: @extra-small-text;
-  max-width: 800px;
-  flex: 1 1 0;
-  @media screen and (max-width: 650px), screen and (max-height: 550px) {
-    font-size: @ultra-small-text;
-  }
-}
-
-//projects
-.home-projects {
-  background-color: @primary-color;
-}
-
-.project {
-  display: flex;
-  align-items: center;
-  margin-bottom: 3rem;
-  border-radius: 5px;
-  @media screen and (max-width: 650px), screen and (max-height: 550px) {
-    flex-direction: column;
-  }
-}
-
-.project:nth-of-type(even) {
-  flex-direction: row-reverse;
-  @media screen and (max-width: 650px), screen and (max-height: 550px) {
-    flex-direction: column;
-  }
-}
-
-.project-details {
-  max-width: 800px;
-  display: flex;
-  flex-direction: column;
-  flex-grow: 2;
-}
-
-.project-content {
-  padding: 2rem;
-  line-height: 2rem;
-}
-
-.project-content h3 {
-  font-size: @small-text;
-  margin-bottom: 2rem;
-}
-
-.project button {
-  background: none;
-  color: inherit;
-  border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0.5rem;
-  margin-top: 8px;
-  background-color: @secondary-color;
-  border-radius: 10px;
-  font: inherit;
-  font-weight: 700;
-  cursor: pointer;
-  outline: inherit;
-}
-
-.project button:hover {
-  transition: 200ms;
-  transform: translateY(-2px);
-  opacity: 80%;
-}
-
-.project a {
-  text-decoration: none;
-}
-
-.project button .button-icon {
-  height: 1.5rem;
-  margin-left: 0.25rem;
-  opacity: 60%;
-  align-items: center;
-}
-
-.project-tools {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.tool {
-  border: 2px solid @accent-color;
-  margin: 0.5rem;
-  padding: 0 0.5rem;
-  border-radius: 5px;
-  font-family: Monaco, Consolas, Lucida Console, monospace;
-}
-
-.project-image img {
-  width: 100%;
-  max-width: 800px;
-  flex: 1 1 0;
-  @media screen and (max-width: 650px), screen and (max-height: 550px) {
-    margin: 2rem 0;
-  }
-}
-
-.animate-image-right {
-  animation-duration: 3s;
-  animation-name: animate-image-right;
-}
-
-.animate-image-left {
-  animation-duration: 3s;
-  animation-name: animate-image-left;
-}
-
-@keyframes animate-image-left {
-  0% {
-    opacity: 0%;
-  }
-  100% {
-    opacity: 100%;
-  }
-}
-
-@keyframes animate-image-right {
-  0% {
-    transform: translateX(-150px);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
-
-//footer
-
-.footer {
-  background-color: @secondary-color;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer p {
-  margin: 1rem;
-}
-
-//social icons
-.links {
-  display: flex;
-  flex-direction: row;
-  margin: 2rem;
-}
-
-.social-icon {
-  padding: 8px;
-  width: 75px;
-  height: 75px;
-  opacity: 60%;
 }
