--- a/src/styles.css
+++ b/src/styles.css
@@ -1,43 +1,36 @@
-* {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  color: #023047;
-}
-/* nav */
-nav {
+.flexCenter {
   display: flex;
-  position: absolute;
-}
-nav a {
-  margin: 8px;
-  font-size: 2rem;
-  font-family: Monaco, Consolas, Lucida Console, monospace;
-}
-@media screen and (max-width: 650px), screen and (max-height: 400px) {
-  nav a {
-    font-size: 1.5rem;
-  }
-}
-/* Home */
-.home-header {
-  display: flex;
-  padding: 1rem;
   align-items: center;
   justify-content: center;
+}
+.flexCenterColumn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.codeFont {
+  font-family: Monaco, Consolas, Lucida Console, monospace;
+}
+.hero {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
   height: 100vh;
   background-color: #e0fbfc;
 }
 @media screen and (max-width: 650px), screen and (max-height: 400px) {
-  .home-header {
+  .hero {
     flex-direction: column;
   }
 }
-.home-header p {
+.hero p {
   font-size: 3rem;
   max-width: 700px;
 }
 @media screen and (max-width: 650px), screen and (max-height: 400px) {
-  .home-header p {
+  .hero p {
     font-size: 1.5rem;
   }
 }
@@ -69,34 +62,13 @@ h2.big-header {
   color: #ee6c4d;
   font-family: Monaco, Consolas, Lucida Console, monospace;
 }
-.home-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 6rem 2rem;
-}
-.home-container h4 {
-  font-size: 4rem;
-  color: #ee6c4d;
-  font-family: Monaco, Consolas, Lucida Console, monospace;
-  margin-bottom: 2em;
-}
-@media screen and (max-width: 800px), screen and (max-height: 400px) {
-  .home-container h4 {
-    font-size: 3rem;
-  }
-}
-.home-container h4:after {
-  content: " ";
-  border: 4px solid #3d5a80;
-  display: block;
-  margin: 0 auto;
-  margin-top: 30px;
-  width: 100px;
-}
 .about-me {
   background-color: #98c1d9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 6rem 2rem;
 }
 .profile-picture img {
   border: 10px solid #ee6c4d;
@@ -147,18 +119,15 @@ h2.big-header {
   font-family: Monaco, Consolas, Lucida Console, monospace;
   color: #ee6c4d;
 }
-.about-me,
-.home-projects {
-  justify-content: center;
-}
 .home-projects h4 {
   align-self: center;
   padding-top: 4rem;
 }
 .about-me content {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
   margin: 3rem;
 }
 @media screen and (max-width: 650px), screen and (max-height: 400px) {
@@ -168,8 +137,6 @@ h2.big-header {
   }
 }
 .about-me-text {
-  flex-direction: column;
-  justify-content: flex-end;
   font-size: 1.5rem;
   max-width: 800px;
   flex: 1 1 0;
@@ -179,12 +146,37 @@ h2.big-header {
     font-size: 1rem;
   }
 }
+.about-me h4 {
+  font-size: 4rem;
+  color: #ee6c4d;
+  font-family: Monaco, Consolas, Lucida Console, monospace;
+  margin-bottom: 2em;
+}
+@media screen and (max-width: 800px), screen and (max-height: 400px) {
+  .about-me h4 {
+    font-size: 3rem;
+  }
+}
+.about-me h4:after {
+  content: " ";
+  border: 4px solid #3d5a80;
+  display: block;
+  margin: 0 auto;
+  margin-top: 30px;
+  width: 100px;
+}
 .home-projects {
   background-color: #e0fbfc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 6rem 2rem;
 }
 .project {
   display: flex;
   align-items: center;
+  justify-content: center;
   margin-bottom: 3rem;
   border-radius: 5px;
 }
@@ -202,10 +194,11 @@ h2.big-header {
   }
 }
 .project-details {
-  max-width: 800px;
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
-  flex-grow: 2;
+  max-width: 800px;
 }
 .project-content {
   padding: 2rem;
@@ -220,8 +213,8 @@ h2.big-header {
   color: inherit;
   border: none;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   padding: 0.5rem;
   margin-top: 8px;
   background-color: #98c1d9;
@@ -243,7 +236,6 @@ h2.big-header {
   height: 1.5rem;
   margin-left: 0.25rem;
   opacity: 60%;
-  align-items: center;
 }
 .project-tools {
   display: flex;
@@ -290,19 +282,39 @@ h2.big-header {
     transform: translateX(0);
   }
 }
+.home-projects h4 {
+  font-size: 4rem;
+  color: #ee6c4d;
+  font-family: Monaco, Consolas, Lucida Console, monospace;
+  margin-bottom: 2em;
+}
+@media screen and (max-width: 800px), screen and (max-height: 400px) {
+  .home-projects h4 {
+    font-size: 3rem;
+  }
+}
+.home-projects h4:after {
+  content: " ";
+  border: 4px solid #3d5a80;
+  display: block;
+  margin: 0 auto;
+  margin-top: 30px;
+  width: 100px;
+}
 .footer {
   background-color: #98c1d9;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 .footer p {
   margin: 1rem;
 }
 .links {
   display: flex;
-  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   margin: 2rem;
 }
 .social-icon {
@@ -310,4 +322,9 @@ h2.big-header {
   width: 75px;
   height: 75px;
   opacity: 60%;
+}
+* {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  color: #023047;
 }
