Fix less refactor

--- a/less/components/about.less
+++ b/less/components/about.less
@@ -1,5 +1,5 @@
-@import "./mixins.less";
-@import "./colors-and-fonts.less";
+@import "../tools/mixins.less";
+@import "../tools/colors-and-fonts.less";
 
 .about-me {
   background-color: @secondary-color;
