--- a/less/components/hero.less
+++ b/less/components/hero.less
@@ -1,5 +1,5 @@
-@import "./colors-and-fonts.less";
-@import "./mixins.less";
+@import "../tools/colors-and-fonts.less";
+@import "../tools/mixins.less";
 
 .hero {
   .flexCenter();
