--- a/less/styles.less
+++ b/less/styles.less
@@ -1,7 +1,7 @@
-@import "./hero.less";
-@import "./about.less";
-@import "./projects.less";
-@import "./footer.less";
+@import "./components/hero.less";
+@import "./components/about.less";
+@import "./components/projects.less";
+@import "./components/footer.less";
 
 //general
 
