--- a/less/components/footer.less
+++ b/less/components/footer.less
@@ -1,5 +1,5 @@
-@import "./mixins.less";
-@import "./colors-and-fonts.less";
+@import "../tools/mixins.less";
+@import "../tools/colors-and-fonts.less";
 
 .footer {
   background-color: @secondary-color;
