--- a/less/components/about.less
+++ b/less/components/about.less
@@ -1,5 +1,5 @@
-@import "../tools/mixins.less";
-@import "../tools/colors-and-fonts.less";
+@import "./tools/mixins.less";
+@import "./tools/colors-and-fonts.less";
 
 .about-me {
   background-color: @secondary-color;
@@ -49,14 +49,32 @@
 
 .about-me-entry {
   padding: 1rem 2rem;
+  font-size: @extra-small-text;
+  max-width: 800px;
+  flex: 1 1 0;
+  @media screen and (max-width: 650px), screen and (max-height: 550px) {
+    font-size: @ultra-small-text;
+  }
 }
 
-.about-me-entry :nth-last-of-type(odd) {
-  color: @off-white;
-}
-
-.about-me-text {
+.about-me-query {
   .codeFont();
+}
+
+.about-me-response {
+  .codeFont();
+  color: @primary-color;
+}
+
+.array-item {
+  .codeFont();
+  list-style-type: none;
+  color: @primary-color
+}
+
+.array-item span {
+  .codeFont();
+  color: @secondary-text-color
 }
 
 #console-log {
@@ -69,39 +87,30 @@
   padding-top: 4rem;
 }
 
-.about-me content {
-  .flexCenterColumn();
-  margin: 3rem;
-  @media screen and (max-width: 650px), screen and (max-height: 400px) {
-    flex-direction: column;
-    margin: 0.25rem;
-  }
-}
-
-.about-me-text {
-  font-size: @extra-small-text;
-  max-width: 800px;
-  flex: 1 1 0;
-  @media screen and (max-width: 650px), screen and (max-height: 550px) {
-    font-size: @ultra-small-text;
-  }
-}
+// .about-me content {
+//   .flexCenterColumn();
+//   margin: 3rem;
+//   @media screen and (max-width: 650px), screen and (max-height: 400px) {
+//     flex-direction: column;
+//     margin: 0.25rem;
+//   }
+// }
 
 .about-me h4 {
-    font-size: @large-text;
-    color: @accent-color;
-    .codeFont();
-    margin-bottom: 2em;
-    @media screen and (max-width: 800px), screen and (max-height: 400px) {
-      font-size: @medium-text;
-    }
+  font-size: @large-text;
+  color: @accent-color;
+  .codeFont();
+  margin-bottom: 2em;
+  @media screen and (max-width: 800px), screen and (max-height: 400px) {
+    font-size: @medium-text;
   }
-  
-  .about-me h4:after {
-    content: " ";
-    border: 4px solid @secondary-text-color;
-    display: block;
-    margin: 0 auto;
-    margin-top: 30px;
-    width: 100px;
-  }
+}
+
+.about-me h4:after {
+  content: " ";
+  border: 4px solid @secondary-text-color;
+  display: block;
+  margin: 0 auto;
+  margin-top: 30px;
+  width: 100px;
+}
