--- a/src/styles.css
+++ b/src/styles.css
@@ -82,12 +82,12 @@ h2.big-header {
   }
 }
 #about-me-code {
-  background-color: #8e9aaf;
+  background-color: #f3f5f8;
   border-radius: 15px 15px 5px 5px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 #about-me-header {
-  background-color: #f3f5f8;
+  background-color: #8e9aaf;
   height: 25px;
   border-radius: 15px 15px 0px 0px;
   display: flex;
@@ -117,21 +117,21 @@ h2.big-header {
     font-size: 1rem;
   }
 }
-.about-me-query {
+.about-me-query,
+.about-me-array {
   font-family: Monaco, Consolas, Lucida Console, monospace;
 }
 .about-me-response {
   font-family: Monaco, Consolas, Lucida Console, monospace;
-  color: #e0fbfc;
+  color: #98c1d9;
 }
 .array-item {
   font-family: Monaco, Consolas, Lucida Console, monospace;
   list-style-type: none;
-  color: #e0fbfc;
 }
 .array-item span {
   font-family: Monaco, Consolas, Lucida Console, monospace;
-  color: #3d5a80;
+  color: #98c1d9;
 }
 #console-log {
   font-family: Monaco, Consolas, Lucida Console, monospace;
