Change hero for very small screens

--- a/less/components/hero.less
+++ b/less/components/hero.less
@@ -40,6 +40,9 @@
   @media screen and (max-width: 650px), screen and (max-height: 400px) {
     font-size: @large-text;
   }
+  @media screen and (max-width: 450px) {
+    font-size: @medium-text;
+  }
 }
 
 h2.big-header {
