Update media queries

--- a/less/components/projects.less
+++ b/less/components/projects.less
@@ -11,14 +11,14 @@
   .flexCenter();
   margin-bottom: 3rem;
   border-radius: 5px;
-  @media screen and (max-width: 650px), screen and (max-height: 550px) {
+  @media screen and (max-width: 768px) {
     flex-direction: column;
   }
 }
 
 .project:nth-of-type(even) {
   flex-direction: row-reverse;
-  @media screen and (max-width: 650px), screen and (max-height: 550px) {
+  @media screen and (max-width: 768px) {
     flex-direction: column;
   }
 }
@@ -86,7 +86,7 @@
   width: 100%;
   max-width: 800px;
   flex: 1 1 0;
-  @media screen and (max-width: 650px), screen and (max-height: 550px) {
+  @media screen and (max-width: 768px) {
     margin: 2rem 0;
   }
 }
