--- a/less/tools/colors-and-fonts.less
+++ b/less/tools/colors-and-fonts.less
@@ -7,6 +7,7 @@
 @off-white: #f3f5f8;
 @screen-color: #8e9aaf;
 
+@huge-text: 8rem;
 @extra-large-text: 6rem;
 @very-large-text: 5rem;
 @large-text: 4rem;
