--- a/src/styles.css
+++ b/src/styles.css
@@ -29,6 +29,11 @@
   font-size: 3rem;
   max-width: 700px;
 }
+@media screen and (max-width: 1200px) {
+  .hero p {
+    font-size: 2rem;
+  }
+}
 @media screen and (max-width: 768px) {
   .hero p {
     font-size: 1.5rem;
@@ -38,12 +43,24 @@
   color: #ee6c4d;
   font-family: Monaco, Consolas, Lucida Console, monospace;
   font-size: 0.8em;
-  animation: fadeIn 8s;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0%;
+  }
+  to {
+    opacity: 100%;
+  }
 }
 .intro h1 {
-  font-size: 2rem;
+  font-size: 3rem;
   color: #023047;
-  animation: fadeIn 3s;
+  animation: fadeIn 5s;
+}
+@media screen and (max-width: 1200px) {
+  .intro h1 {
+    font-size: 2rem;
+  }
 }
 @media screen and (max-width: 768px) {
   .intro h1 {
@@ -51,7 +68,12 @@
   }
 }
 .big-header {
-  font-size: 6rem;
+  font-size: 8rem;
+}
+@media screen and (max-width: 1200px) {
+  .big-header {
+    font-size: 6rem;
+  }
 }
 @media screen and (max-width: 768px) {
   .big-header {
