Add paper background

--- a/src/styles.css
+++ b/src/styles.css
@@ -230,6 +230,9 @@ h2.big-header {
 .project-content {
   padding: 2rem;
   line-height: 2rem;
+  background-color: #f3f5f8;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 .project-content h3 {
   font-size: 2rem;
