--- a/less/components/projects.less
+++ b/less/components/projects.less
@@ -31,6 +31,9 @@
 .project-content {
   padding: 2rem;
   line-height: 2rem;
+  background-color: @off-white;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .project-content h3 {
