Add styling and nav bar

--- a/less/components/projects.less
+++ b/less/components/projects.less
@@ -106,10 +106,10 @@
 
 @keyframes animate-image-left {
   0% {
-    opacity: 0%;
+    transform: translateX(150px);
   }
   100% {
-    opacity: 100%;
+    transform: translateX(0);
   }
 }
 
