--- a/less/styles.less
+++ b/less/styles.less
@@ -2,13 +2,21 @@
 @import "./components/about.less";
 @import "./components/projects.less";
 @import "./components/footer.less";
+@import "./components/nav.less";
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 //general
 
 * {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  padding: 0;
+  font-family: 'Raleway', sans-serif;
   color: @primary-text-color;
+  box-sizing: border-box;
+}
+
+body {
+  overflow-x: hidden;
 }
