--- a/src/styles.css
+++ b/src/styles.css
@@ -367,6 +367,7 @@ h2.big-header {
 .brand-title {
   font-size: 1.5rem;
   margin: 0.5rem;
+  letter-spacing: 0.2rem;
 }
 .nav-links {
   display: flex;
