Fix navbar mobile links

--- a/less/components/nav.less
+++ b/less/components/nav.less
@@ -64,12 +64,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
     width: 50%;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
   }
   .nav-links li {
     opacity: 0;
+    margin: 2rem;
   }
   .burger {
     display: block;
