Add social links to navbar

--- a/less/components/nav.less
+++ b/less/components/nav.less
@@ -20,7 +20,7 @@
 .nav-links {
   display: flex;
   justify-content: space-around;
-  width: 45%;
+  width: 55%;
 }
 
 .nav-links li {
@@ -30,12 +30,16 @@
   text-decoration: none;
   font-weight: bold;
   letter-spacing: 3px;
-  font-size: @extra-small-text;
-  transition: 200ms;
+  font-size: @ultra-small-text;
+  transition: 200ms
 }
 
 .nav-links a:hover {
   color: @secondary-color;
+}
+
+.nav-icon {
+  width: 15px;
 }
 
 .burger {
