--- a/less/components/nav.less
+++ b/less/components/nav.less
@@ -31,7 +31,7 @@
   font-weight: bold;
   letter-spacing: 3px;
   font-size: @ultra-small-text;
-  transition: 200ms
+  transition: 200ms;
 }
 
 .nav-links a:hover {
