--- a/less/components/hero.less
+++ b/less/components/hero.less
@@ -14,7 +14,7 @@
 .hero p {
   font-size: @medium-text;
   max-width: 700px;
-  // animation: slideUp 3s;
+  animation: slideUp 3s;
   @media screen and (max-width: 1200px) {
     font-size: @small-text;
   }
@@ -38,26 +38,14 @@
   }
 }
 
-// @keyframes slideUp {
-//   0% {
-//     transform: translateY(500px);
-//   }
-//   20% {
-//     transform: translateY(0px);
-//   }
-//   30% {
-//     transform: translateY(50px);
-//   }
-//   45% {
-//     transform: translateY(0px);
-//   }
-//   60% {
-//     transform: translateY(30px);
-//   }
-//   80% {
-//     transform: translateY(0px);
-//   }
-// }
+@keyframes slideUp {
+  0% {
+    transform: translateY(600px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
 
 .intro h1 {
   font-size: @medium-text;
