--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,7 @@
 .hero p {
   font-size: 3rem;
   max-width: 700px;
+  animation: slideUp 3s;
 }
 @media screen and (max-width: 1200px) {
   .hero p {
@@ -50,6 +51,14 @@
   }
   to {
     opacity: 100%;
+  }
+}
+@keyframes slideUp {
+  0% {
+    transform: translateY(600px);
+  }
+  100% {
+    transform: translateY(0px);
   }
 }
 .intro h1 {
