--- a/less/components/projects.less
+++ b/less/components/projects.less
@@ -34,6 +34,10 @@
   background-color: @off-white;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  @media screen and (max-width: 480px) {
+    .flexCenterColumn();
+    text-align: center;
+  }
 }
 
 .project-content h3 {
@@ -47,7 +51,7 @@
   border: none;
   .flexCenter();
   padding: 0.5rem;
-  margin-top: 8px;
+  margin: 8px;
   background-color: @secondary-color;
   border-radius: 10px;
   font: inherit;
@@ -75,6 +79,9 @@
 .project-tools {
   display: flex;
   flex-wrap: wrap;
+  @media screen and (max-width: 480px) {
+    .flexCenter();
+  }
 }
 
 .tool {
@@ -91,6 +98,14 @@
   flex: 1 1 0;
   @media screen and (max-width: 768px) {
     margin: 2rem 0;
+  }
+}
+
+.project-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  @media screen and (max-width: 480px) {
+    .flexCenterColumn();
   }
 }
 
