--- a/less/components/projects.less
+++ b/less/components/projects.less
@@ -2,7 +2,6 @@
 @import "../tools/colors-and-fonts.less";
 
 .home-projects {
-  background-color: @primary-color;
   .flexCenterColumn();
   padding: 6rem 2rem;
 }
@@ -23,6 +22,10 @@
   }
 }
 
+.project > * {
+  margin: 1em;
+}
+
 .project-details {
   .flexCenterColumn();
   max-width: 800px;
@@ -31,7 +34,7 @@
 .project-content {
   padding: 2rem;
   line-height: 2rem;
-  background-color: @off-white;
+  background-color: rgba(224, 251, 252, .4);
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   @media screen and (max-width: 480px) {
