--- a/src/styles.css
+++ b/src/styles.css
@@ -203,7 +203,6 @@ h2.big-header {
   width: 100px;
 }
 .home-projects {
-  background-color: #e0fbfc;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -230,6 +229,9 @@ h2.big-header {
     flex-direction: column;
   }
 }
+.project > * {
+  margin: 1em;
+}
 .project-details {
   display: flex;
   align-items: center;
@@ -240,7 +242,7 @@ h2.big-header {
 .project-content {
   padding: 2rem;
   line-height: 2rem;
-  background-color: #f3f5f8;
+  background-color: rgba(224, 251, 252, 0.4);
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
