--- a/less/components/nav.less
+++ b/less/components/nav.less
@@ -20,11 +20,11 @@
 .nav-links {
   display: flex;
   justify-content: space-around;
-  width: 55%;
 }
 
 .nav-links li {
   list-style: none;
+  margin: 1em;
 }
 .nav-links a {
   text-decoration: none;
