--- a/src/styles.css
+++ b/src/styles.css
@@ -412,10 +412,10 @@ h2.big-header {
 .nav-links {
   display: flex;
   justify-content: space-around;
-  width: 55%;
 }
 .nav-links li {
   list-style: none;
+  margin: 1em;
 }
 .nav-links a {
   text-decoration: none;
