--- a/less/components/about.less
+++ b/less/components/about.less
@@ -81,6 +81,11 @@
   color: @accent-color;
 }
 
+.bio {
+  display: block;
+  margin-top: 20px;
+}
+
 #console-log {
   .codeFont();
   color: @secondary-color;
